src/app/planner/team/team.component.scss
.points-container {
  flex-grow: 0;
  border-top: 2px var(--mat-sys-outline) solid;
  display: flex;
  flex-direction: column;

  th {
    text-align: end;
  }

  td,
  th {
    padding: 0rem 0.5rem;
  }
}

.table-container {
  flex-grow: 1;
  overflow-y: auto;
}

table {
  table-layout: fixed;

  thead tr {
    top: 0px;
    z-index: 1100;
    background-color: var(--secondary-70);
    color: var(--mat-sys-on-secondary);
    border-bottom: 2px var(--secondary-50) solid;
    position: sticky;
  }
  tbody {
    td {
      text-align: center;
      padding: 0.25rem 0 0 0.5rem;
      width: fit-content;
      &:last-child {
        padding-right: 0.5rem;
      }
    }
  }
}
.preview-sprite {
  height: 4rem;
}

.team-item:not(:last-child) {
  border-bottom: 1px var(--secondary-60) solid;
}

.value-input {
  width: 5rem;

  input {
    text-align: center;
    &::-webkit-inner-spin-button,
    &::-webkit-outer-spin-button {
      appearance: none;
      margin: 0;
    }
    &::-moz-number-spin-box,
    &::-moz-number-spin-buttons {
      display: none;
    }
    -moz-appearance: textfield;
    appearance: textfield;
  }
}

.pokemon-input {
  width: 12rem;
}

.drag-icon {
  cursor: move;
  color: var(--mat-sys-on-surface-variant);
}

.cdk-drag-preview {
  box-sizing: border-box;
  max-width: 6rem;
  object-fit: contain;
  border-radius: 4px;
  box-shadow:
    0 5px 5px -3px rgba(0, 0, 0, 0.2),
    0 8px 10px 1px rgba(0, 0, 0, 0.14),
    0 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.cdk-drag-animating {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.team-list.cdk-drop-list-dragging .team-item:not(.cdk-drag-placeholder) {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.cdk-drag-placeholder {
  opacity: 0;
}

.sprite-wrapper {
  width: 4rem;
  height: 4rem;
}

